--- a/frontend/src/app/nav/nav.html
+++ b/frontend/src/app/nav/nav.html
@@ -4,6 +4,6 @@
     <nav>
         <a routerLink="/home"  routerLinkActive="activo" [routerLinkActiveOptions]="{exact: true}">Inicio</a>
         <a routerLink="/products" routerLinkActive="activo">Productos</a>
-        <a routerLink="/categories" routerLinkActive="activo">Categorias</a>
+        <a routerLink="/categories" routerLinkActive="activo">Categorías</a>
     </nav>
 </header>
