--- a/frontend/src/app/pages/categories/category-list/category-list.html
+++ b/frontend/src/app/pages/categories/category-list/category-list.html
@@ -1,1 +1,64 @@
-<p>category-list works!</p>
+<div class="parent">
+    <div class="div1">
+      <h1>Lista de Categorias</h1>
+        <button type="button" routerLink="/categories/new" class="button">
+         <span class="button__text">Agregar Categoría</span>
+         <span class="button__icon"><svg xmlns="http://www.w3.org/2000/svg" width="24" viewBox="0 0 24 24" stroke-width="2" stroke-linejoin="round" stroke-linecap="round" stroke="currentColor" height="24" fill="none" class="svg"><line y2="19" y1="5" x2="12" x1="12"></line><line y2="12" y1="12" x2="19" x1="5"></line></svg></span>
+        </button>
+    </div>
+    <div class="div2">
+<div class="search-bar">
+  <div class="search-input">
+    <svg class="search-icon" xmlns="http://www.w3.org/2000/svg" height="20" viewBox="0 0 24 24" width="20">
+      <path fill="currentColor"
+        d="M15.5 14h-.79l-.28-.27A6.471 6.471 0 0016 9.5 6.5 6.5 0 109.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zM9.5 14c-2.49 0-4.5-2.01-4.5-4.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z" />
+    </svg>
+    <input
+      type="text"
+      placeholder="Buscar por nombre..."
+      [(ngModel)]="searchName"
+      (input)="filtrarCategorias()"
+    />
+  </div>
+</div>
+
+      <table *ngIf="categories.length > 0; else sinCategorias">
+    <thead>
+      <tr>
+        <th>Nombre</th>
+        <th>Descripción</th>
+        <th>Fecha de Creación</th>
+        <th>Acciones</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let category of filteredCategories">
+        <td>{{ category.name }}</td>
+        <td>{{ category.description }}</td>
+        <td>{{ category.dateCreated | date:'dd/MM/yyyy HH:mm'}}</td>
+        <td>
+
+           <div class="action-buttons">
+            <a
+              [routerLink]="['/categories/edit', category.id]"
+              class="btn btn-edit"
+              title="Editar"
+            ><i class="fa-solid fa-pen-to-square" style="color: #2d3c67;"></i>  </a>
+            <button
+              (click)="deleteCategory(category.id!)"
+              class="btn btn-delete"
+              title="Eliminar"
+            ><i class="fa-solid fa-trash " style="color: #2d3c67;"></i></button>
+          </div>
+        </td>
+      </tr>
+    </tbody>
+  </table>
+
+  <ng-template #sinCategorias>
+    <p>No hay categorías registradas.</p>
+  </ng-template>
+    </div>
+
+    <div class="div3"></div>
+</div>
