--- a/frontend/src/app/pages/products/product-form/product-form.html
+++ b/frontend/src/app/pages/products/product-form/product-form.html
@@ -1,3 +1,5 @@
+
+<div class="parent">
 <div class="container">
   <h2>{{ isEdit ? 'Editar' : 'Crear' }} Producto</h2>
 
@@ -8,6 +10,9 @@
       <small *ngIf="form.controls['name'].invalid && form.controls['name'].touched">
         El nombre es obligatorio y debe tener al menos 3 caracteres.
       </small>
+        <small *ngIf="formErrors['name']" class="error">
+    {{ formErrors['name'] }}
+  </small>
     </div>
 
     <div class="form-group">
@@ -16,11 +21,17 @@
       <small *ngIf="form.controls['price'].invalid && form.controls['price'].touched">
         El precio debe ser mayor a 0.
       </small>
+        <small *ngIf="formErrors['price']" class="error">
+    {{ formErrors['price'] }}
+  </small>
     </div>
 
     <div class="form-group">
       <label for="description">Descripción:</label>
       <textarea id="description" formControlName="description"></textarea>
+      <small *ngIf="form.controls['description'].invalid && form.controls['description'].touched">
+        Descripción obligatoria.
+      </small>
     </div>
 
     <button type="submit" [disabled]="form.invalid" class="btn btn-primary">
@@ -30,3 +41,5 @@
     <a routerLink="/products" class="btn btn-secondary">Cancelar</a>
   </form>
 </div>
+</div>
+
